fix: change heading setting

--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -104,10 +104,10 @@
         "default": "Trusted by 1,000+ happy customers"
       },
       {
-        "type": "richtext",
+        "type": "text",
         "id": "heading",
         "label": "Heading",
-        "default": "<p>Wake Up The <em>Muscles</em> That Matter.</p>"
+        "default": "Wake Up The Muscles That Matter."
       }, {
         "type": "textarea",
         "id": "subheading",
